syntax = "proto3";

package dataservice;

message DataResponse {
  string data = 1;
}
